=== master

* Support Database#indexes :include_partial option on PostgreSQL for including partial indexes (jeremyevans)

* Include more diagnostic information in Database#error_info on PostgreSQL (jeremyevans)

* Support Database#foreign_key_list :reverse option on PostgreSQL for parsing foreign key constraints that reference a given table (jeremyevans)

* Add Database#check_constraints on PostgreSQL for parsing CHECK constraints (jeremyevans)

* Don't use identity columns if :serial=>true or :type=>:serial|:bigserial column options are used (#1490) (jeremyevans)

* Cache Dataset#select_all datasets if no arguments are given (jeremyevans)

* Cache Dataset#returning datasets if no arguments are given (jeremyevans)

* Cache Dataset#qualify datasets if no argument is given (jeremyevans)

* Cache Dataset#lateral datasets (jeremyevans)

* Cache Dataset#from_self datasets if no options are given (jeremyevans)

* Cache Dataset#distinct datasets if no arguments or block is given (jeremyevans)

=== 5.7.0 (2018-04-01)

* Add Sequel.start_timer and .elapsed_seconds_since for more accurate elapsed time calculations on ruby 2.1+ (jeremyevans)

* Run Dataset#with_sql_{all,each,first,single_value} using a cached dataset to avoid clobbering the dataset's columns (jeremyevans)

* Add Database#convert_serial_to_identity on PostgreSQL 10.2+, which requires superuser access (jeremyevans)

* Fix Database#server_version when connecting to PostgreSQL 10.1+ in certain cases (jeremyevans)

* Free temporary clobs in the jdbc/oracle adapter to prevent a memory leak (jeremyevans) (#1482)

* Treat prepared statement errors due to changing types as disconnect errors in the postgres adapter (jeremyevans) (#1481)

* Add integer64 extension for treating Integer as a 64-bit integer when used as a generic type (jeremyevans)

* Allow many_to_pg_array remove_all_* method cast appropriately to work correctly for non-integer types (jeremyevans)
